Yearly top movies list for 4 countries

--- a/notebooks/popular_movies.ipynb
+++ b/notebooks/popular_movies.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -1153,13 +1153,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#re-load dataframe\n",
+    "df_us = pd.read_csv('C:\\Users\\WSKIM\\Dropbox\\moviemeta\\df_popular_us.csv')\n",
+    "df_ge = pd.read_csv('C:\\Users\\WSKIM\\Dropbox\\moviemeta\\df_popular_ge.csv')\n",
+    "df_kr = pd.read_csv('C:\\Users\\WSKIM\\Dropbox\\moviemeta\\df_popular_kr.csv') \n",
+    "df_uk = pd.read_csv('C:\\Users\\WSKIM\\Dropbox\\moviemeta\\df_popular_uk.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Concatenate 4 dataframes\n",
+    "frames =[df_us, df_ge, df_kr, df_uk]\n",
+    "df = pd.concat(frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plots_list = df['wiki_plot'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#cleaning the plots text : remove tags like <p>, </p> \n"
+    "#cleaning text \n",
+    "import string, re\n",
+    "cleaned_list =[]\n",
+    "for plot in plots_list:\n",
+    "    cleaned = plot.replace('<p>', '').replace('</p>','').replace('</a>','').replace('<span>','').replace('</span>','').replace('\\\\','').replace('</sup>','')\n",
+    "    #re.sub('<[^>]*>', '', cleaned)\n",
+    "    cleaned_list.append(re.sub('<[^>]*>', '', cleaned))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>country</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>source</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>url_wiki</th>\n",
+       "      <th>wiki_plot</th>\n",
+       "      <th>cleaned_plot</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>US</td>\n",
+       "      <td>American Sniper</td>\n",
+       "      <td>boxofficemojo</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/American_Sniper</td>\n",
+       "      <td>[u'&lt;p&gt;Growing up in &lt;a href=\"/wiki/Texas\" titl...</td>\n",
+       "      <td>[u'Growing up in Texas, Chris Kyle is taught b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>US</td>\n",
+       "      <td>The Hunger Games: Mockingjay - Part 1</td>\n",
+       "      <td>boxofficemojo</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The_Hunger_Games...</td>\n",
+       "      <td>[u'&lt;p&gt;After being rescued from the destroyed a...</td>\n",
+       "      <td>[u'After being rescued from the destroyed aren...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Guardians of the Galaxy</td>\n",
+       "      <td>boxofficemojo</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Guardians_of_the...</td>\n",
+       "      <td>[u'&lt;p&gt;In 1988, following his mother\\'s death, ...</td>\n",
+       "      <td>[u'In 1988, following his mother's death, a yo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Captain America: The Winter Soldier</td>\n",
+       "      <td>boxofficemojo</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Captain_America:...</td>\n",
+       "      <td>[u'&lt;p&gt;Two years after &lt;a href=\"/wiki/The_Aveng...</td>\n",
+       "      <td>[u'Two years after the Battle of New York,[4] ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>US</td>\n",
+       "      <td>The LEGO Movie</td>\n",
+       "      <td>boxofficemojo</td>\n",
+       "      <td>United States, Australia,Denmark</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The_Lego_Movie</td>\n",
+       "      <td>[u'&lt;p&gt;In the &lt;a href=\"/wiki/Lego\" title=\"Lego\"...</td>\n",
+       "      <td>[u'In the Lego universe, the wizard Vitruvius ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year country                                  movie         source                            origin                                           url_wiki                                          wiki_plot                                       cleaned_plot\n",
+       "0  2014      US                        American Sniper  boxofficemojo                     United States      https://en.wikipedia.org/wiki/American_Sniper  [u'<p>Growing up in <a href=\"/wiki/Texas\" titl...  [u'Growing up in Texas, Chris Kyle is taught b...\n",
+       "1  2014      US  The Hunger Games: Mockingjay - Part 1  boxofficemojo                     United States  https://en.wikipedia.org/wiki/The_Hunger_Games...  [u'<p>After being rescued from the destroyed a...  [u'After being rescued from the destroyed aren...\n",
+       "2  2014      US                Guardians of the Galaxy  boxofficemojo                     United States  https://en.wikipedia.org/wiki/Guardians_of_the...  [u'<p>In 1988, following his mother\\'s death, ...  [u'In 1988, following his mother's death, a yo...\n",
+       "3  2014      US    Captain America: The Winter Soldier  boxofficemojo                     United States  https://en.wikipedia.org/wiki/Captain_America:...  [u'<p>Two years after <a href=\"/wiki/The_Aveng...  [u'Two years after the Battle of New York,[4] ...\n",
+       "4  2014      US                         The LEGO Movie  boxofficemojo  United States, Australia,Denmark       https://en.wikipedia.org/wiki/The_Lego_Movie  [u'<p>In the <a href=\"/wiki/Lego\" title=\"Lego\"...  [u'In the Lego universe, the wizard Vitruvius ..."
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#add cleaned plot list to dataframe\n",
+    "df['cleaned_plot'] = pd.Series(cleaned_list, index=df.index)\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d = pd.read_csv('C:\\Users\\WSKIM\\Desktop\\CS109\\FinalProject\\us_dvd.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Frozen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Hunger Games: Catching Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Lego Movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Despicable Me 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Hobbit: The Desolation of Smaug</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Title\n",
+       "0                               Frozen\n",
+       "1      The Hunger Games: Catching Fire\n",
+       "2                       The Lego Movie\n",
+       "3                      Despicable Me 2\n",
+       "4  The Hobbit: The Desolation of Smaug"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dvd_list = d['Title'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Frozen', 'The Hunger Games: Catching Fire']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dvd_list[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top = pd.read_csv('C:\\Users\\WSKIM\\Desktop\\CS109\\FinalProject\\us_top.csv')\n",
+    "top_list = top['movie'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['American Sniper', 'The Hunger Games: Mockingjay - Part 1']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_list[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'22 Jump Street',\n",
+       " 'Blended',\n",
+       " 'Captain America: The Winter Soldier',\n",
+       " 'Dawn of the Planet of the Apes',\n",
+       " 'Divergent',\n",
+       " 'Dolphin Tale 2',\n",
+       " 'Guardians of the Galaxy',\n",
+       " 'Heaven is for Real',\n",
+       " 'How to Train Your Dragon 2',\n",
+       " 'Maleficent',\n",
+       " 'Mr. Peabody & Sherman',\n",
+       " 'Neighbors',\n",
+       " 'Noah',\n",
+       " 'Non-Stop',\n",
+       " 'Ride Along',\n",
+       " 'Rio 2',\n",
+       " 'Son of God',\n",
+       " 'Tammy',\n",
+       " 'The Amazing Spider-Man 2',\n",
+       " 'The Expendables 3',\n",
+       " 'The Maze Runner',\n",
+       " 'The Monuments Men',\n",
+       " 'The Nut Job',\n",
+       " 'Transformers: Age of Extinction'}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(dvd_list).intersection(top_list)"
    ]
   },
   {
@@ -1169,20 +1505,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#add popularity measures : dvd sales data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#merge 4 dataframes into 1 dataframe\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
