unicode url handling; ignore exceptions

--- a/notebooks/dbpedia_plots.ipynb
+++ b/notebooks/dbpedia_plots.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -24,6 +24,7 @@
     "import urllib2\n",
     "from bs4 import BeautifulSoup\n",
     "import httplib\n",
+    "import time\n",
     "\n",
     "movies_for_year_query = \"\"\"\n",
     "                PREFIX dbpont: <http://dbpedia.org/ontology/>\n",
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -210,12 +211,48 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://en.wikipedia.org/wiki/Comedy_of_Innocence: HTTPException\n",
+      "http://en.wikipedia.org/wiki/Hamlet_(2000_film): URLError = [Errno 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond\n",
+      "http://en.wikipedia.org/wiki/2001:_A_Space_Travesty: URLError = [Errno 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond\n",
+      "http://en.wikipedia.org/wiki/Amy_Stiller's_Breast: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Hindustan_the_Mother: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Oh_Nanna_Nalle: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Faithless_(2000_film): generic exception\n",
+      "http://en.wikipedia.org/wiki/Long_Night's_Journey_into_Day: HTTPException\n",
+      "http://en.wikipedia.org/wiki/Sradha: generic exception\n",
+      "('1171', ' records for the year ', '2000', 'written to ', 'wikipedia_plots_2000.csv')\n",
+      "http://en.wikipedia.org/wiki/Tere_Liye_(film): HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Pandavar_Bhoomi: URLError = [Errno 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond\n",
+      "http://en.wikipedia.org/wiki/Over-Thirty_Alumnus_Association: HTTPError = 404\n",
+      "('1212', ' records for the year ', '2001', 'written to ', 'wikipedia_plots_2001.csv')\n",
+      "http://en.wikipedia.org/wiki/Make-Up_(2002_film): HTTPError = 404\n",
+      "('1257', ' records for the year ', '2002', 'written to ', 'wikipedia_plots_2002.csv')\n",
+      "http://en.wikipedia.org/wiki/Vijayam: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Lloyd_2:_Growing_Up: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Ravedactyl:_Project_Evolution: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Penetration_Angst: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/MTV_Movie_Awards_Reloaded: HTTPError = 404\n",
+      "('1374', ' records for the year ', '2003', 'written to ', 'wikipedia_plots_2003.csv')\n",
+      "http://en.wikipedia.org/wiki/A_Beautiful_Mind..._of_a_Gladiator: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Expendable_(film): HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Smile_Please_(film): HTTPError = 404\n",
+      "('1499', ' records for the year ', '2004', 'written to ', 'wikipedia_plots_2004.csv')\n",
+      "http://en.wikipedia.org/wiki/Across_the_Hall_(2005_film): HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/Forest_Chainsaw_Massacre: HTTPError = 404\n",
+      "http://en.wikipedia.org/wiki/The_Death_of_Seasons: HTTPError = 404\n",
+      "('1622', ' records for the year ', '2005', 'written to ', 'wikipedia_plots_2005.csv')\n",
+      "http://en.wikipedia.org/wiki/Bekhal's_Tears: HTTPError = 404"
+     ]
+    }
+   ],
    "source": [
-    "import time\n",
-    "\n",
     "for year in years:\n",
     "    dbp_df = get_dbpedia_data_for_year(year)\n",
     "    dbp_df['wiki_plot'] = dbp_df.wikipediaLink.apply(lambda link:get_wikipedia_plot(link))\n",
@@ -223,6 +260,15 @@
     "    dbp_df.to_csv(csv_filename, sep='\\t', encoding='utf-8')\n",
     "    print(str(len(dbp_df)), \" records for the year \", str(year), \"written to \", csv_filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
