test lda on US top movies

--- a/notebooks/yearly_top_movies.ipynb
+++ b/notebooks/yearly_top_movies.ipynb
@@ -21,7 +21,8 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -89,6 +90,79 @@
    "source": [
     "df_popular=pd.read_csv('C:\\Users\\WSKIM\\Dropbox\\moviemeta\\Top500_since2001.csv')\n",
     "df_popular.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>movie</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18303</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>Koi no mon (Otakus in Love)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18304</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>Yaku san-j? no uso (Thirty Lies or So)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18305</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>In Search of Lost Time</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18306</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>NoGaD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18307</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>Crazy for You</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country  year                                   movie\n",
+       "18303  South Korea  2007             Koi no mon (Otakus in Love)\n",
+       "18304  South Korea  2007  Yaku san-j? no uso (Thirty Lies or So)\n",
+       "18305  South Korea  2007                  In Search of Lost Time\n",
+       "18306  South Korea  2007                                   NoGaD\n",
+       "18307  South Korea  2007                           Crazy for You"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_popular.tail(5)"
    ]
   },
   {
