just committing so I can pull

--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -53,24 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dropbox = \"/Users/mr/Dropbox/moviemeta/\""
+    "dropbox = \"/Users/mr/Dropbox/moviemeta/\"\n",
+    "#dropbox = urllib2.urlopen('https://www.dropbox.com/sh/bhrp12eqlj3zw0f/AAAlf4VJED2JXHLL6yUzuWoea?dl=0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 132,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "movieplots = pd.read_csv(dropbox + 'movieplots.csv')"
+    "movieplots = pd.read_csv(dropbox + 'movieplots.csv')\n",
+    "#movieplots = pd.read_csv('https://www.dropbox.com/s/2pg5hizpwopy1ei/movieplots.csv?dl=0')"
    ]
   },
   {
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -516,20 +518,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([TaggedDocument(words=[u'st', u'john', u'newfoundland', u'is', u'citi', u'with', u'deep', u'music', u'spirit', u'and', u'few', u'band', u'embodi', u'that', u'spirit', u'better', u'that', u'the', u'onc'], tags=[None]), TaggedDocument(words=[u'name', u'for', u'uniqu', u'newfoundland', u'phrase', u'that', u'mean', u'immin', u'now', u'is', u'inde', u'their', u'time'], tags=[None]), TaggedDocument(words=[u'live', u'at', u'the', u'stagehous', u'is', u'an', u'hour', u'of', u'interview', u'and', u'perform', u'by', u'thi', u'amaz', u'trio', u'featur', u'song', u'record', u'live', u'off', u'the', u'floor', u'in', u'late', u'at', u'the', u'picturesqu', u'stagehous', u'record', u'studio', u'in', u'st', u'philip'], tags=[None]), TaggedDocument(words=[u'the', u'onc', u'embrac', u'differ', u'vision', u'of', u'newfoundland', u'music'], tags=[None]), TaggedDocument(words=[u'their', u'sound', u'do', u'not', u'come', u'from', u'the', u'noisi', u'pub', u'and', u'docksid', u'tavern', u'that', u'fuel', u'so', u'much', u'of', u'the', u'island', u'energi'], tags=[None]), TaggedDocument(words=[u'instead', u'their', u'music', u'come', u'from', u'quieter', u'and', u'more', u'thought', u'place'], tags=[None]), TaggedDocument(words=[u'hope', u'and', u'tragedi', u'are', u'intertwin', u'whether', u'they', u'are', u'sing', u'an', u'old', u'lament', u'from', u'world', u'war', u'origin', u'song', u'that', u'speak', u'of', u'love', u'defeat', u'or', u'tast', u'song', u'from', u'the', u'artist', u'whose', u'music', u'inspir', u'them'], tags=[None]), TaggedDocument(words=[u'the', u'onc', u'live', u'at', u'the', u'stagehous', u'featur', u'some', u'of', u'their', u'best-lov', u'tune', u'and', u'some', u'never', u'heard', u'befor'], tags=[None]), TaggedDocument(words=[u'it', u'is', u'uniqu', u'opportun', u'to', u'see', u'one', u'of', u'canada', u'fastest', u'rise', u'band', u'in', u'the', u'place', u'that', u'inspir', u'them', u'and', u'feed', u'their', u'soul'], tags=[None])], [u'st', u'john', u'newfoundland', u'is', u'citi', u'with', u'deep', u'music', u'spirit', u'and', u'few', u'band', u'embodi', u'that', u'spirit', u'better', u'that', u'the', u'onc', u'name', u'for', u'uniqu', u'newfoundland', u'phrase', u'that', u'mean', u'immin', u'now', u'is', u'inde', u'their', u'time', u'live', u'at', u'the', u'stagehous', u'is', u'an', u'hour', u'of', u'interview', u'and', u'perform', u'by', u'thi', u'amaz', u'trio', u'featur', u'song', u'record', u'live', u'off', u'the', u'floor', u'in', u'late', u'at', u'the', u'picturesqu', u'stagehous', u'record', u'studio', u'in', u'st', u'philip', u'the', u'onc', u'embrac', u'differ', u'vision', u'of', u'newfoundland', u'music', u'their', u'sound', u'do', u'not', u'come', u'from', u'the', u'noisi', u'pub', u'and', u'docksid', u'tavern', u'that', u'fuel', u'so', u'much', u'of', u'the', u'island', u'energi', u'instead', u'their', u'music', u'come', u'from', u'quieter', u'and', u'more', u'thought', u'place', u'hope', u'and', u'tragedi', u'are', u'intertwin', u'whether', u'they', u'are', u'sing', u'an', u'old', u'lament', u'from', u'world', u'war', u'origin', u'song', u'that', u'speak', u'of', u'love', u'defeat', u'or', u'tast', u'song', u'from', u'the', u'artist', u'whose', u'music', u'inspir', u'them', u'the', u'onc', u'live', u'at', u'the', u'stagehous', u'featur', u'some', u'of', u'their', u'best-lov', u'tune', u'and', u'some', u'never', u'heard', u'befor', u'it', u'is', u'uniqu', u'opportun', u'to', u'see', u'one', u'of', u'canada', u'fastest', u'rise', u'band', u'in', u'the', u'place', u'that', u'inspir', u'them', u'and', u'feed', u'their', u'soul'])\n",
+      "[u'st', u'john', u'newfoundland', u'is', u'citi', u'with', u'deep', u'music', u'spirit', u'and', u'few', u'band', u'embodi', u'that', u'spirit', u'better', u'that', u'the', u'onc', u'name', u'for', u'uniqu', u'newfoundland', u'phrase', u'that', u'mean', u'immin', u'now', u'is', u'inde', u'their', u'time', u'live', u'at', u'the', u'stagehous', u'is', u'an', u'hour', u'of', u'interview', u'and', u'perform', u'by', u'thi', u'amaz', u'trio', u'featur', u'song', u'record', u'live', u'off', u'the', u'floor', u'in', u'late', u'at', u'the', u'picturesqu', u'stagehous', u'record', u'studio', u'in', u'st', u'philip', u'the', u'onc', u'embrac', u'differ', u'vision', u'of', u'newfoundland', u'music', u'their', u'sound', u'do', u'not', u'come', u'from', u'the', u'noisi', u'pub', u'and', u'docksid', u'tavern', u'that', u'fuel', u'so', u'much', u'of', u'the', u'island', u'energi', u'instead', u'their', u'music', u'come', u'from', u'quieter', u'and', u'more', u'thought', u'place', u'hope', u'and', u'tragedi', u'are', u'intertwin', u'whether', u'they', u'are', u'sing', u'an', u'old', u'lament', u'from', u'world', u'war', u'origin', u'song', u'that', u'speak', u'of', u'love', u'defeat', u'or', u'tast', u'song', u'from', u'the', u'artist', u'whose', u'music', u'inspir', u'them', u'the', u'onc', u'live', u'at', u'the', u'stagehous', u'featur', u'some', u'of', u'their', u'best-lov', u'tune', u'and', u'some', u'never', u'heard', u'befor', u'it', u'is', u'uniqu', u'opportun', u'to', u'see', u'one', u'of', u'canada', u'fastest', u'rise', u'band', u'in', u'the', u'place', u'that', u'inspir', u'them', u'and', u'feed', u'their', u'soul']\n",
       "\n",
-      "([TaggedDocument(words=[u'picturesqu', u'stagehous', u'record', u'studio', u'featur', u'song', u'record', u'live', u'fastest', u'rise', u'band', u'deep', u'music', u'spirit', u'uniqu', u'newfoundland', u'phrase', u'tast', u'song', u'origin', u'song', u'uniqu', u'opportun', u'band', u'embodi', u'stagehous', u'featur', u'love', u'defeat', u'docksid', u'tavern', u'amaz', u'trio', u'best-lov', u'tune', u'world', u'war', u'noisi', u'pub', u'newfoundland', u'music', u'music', u'come', u'music', u'inspir', u'stagehous', u'live', u'spirit', u'newfoundland', u'inspir', u'name', u'inde', u'energi', u'john', u'embrac', u'heard', u'thought', u'artist', u'sound', u'sing', u'speak', u'canada', u'citi', u'quieter', u'floor', u'interview', u'mean', u'tragedi', u'fuel', u'instead', u'hope', u'island', u'philip', u'immin', u'intertwin', u'hour', u'lament', u'perform', u'soul', u'st', u'time', u'feed', u'vision', u'late'], tags=[None])], [u'picturesqu', u'stagehous', u'record', u'studio', u'featur', u'song', u'record', u'live', u'fastest', u'rise', u'band', u'deep', u'music', u'spirit', u'uniqu', u'newfoundland', u'phrase', u'tast', u'song', u'origin', u'song', u'uniqu', u'opportun', u'band', u'embodi', u'stagehous', u'featur', u'love', u'defeat', u'docksid', u'tavern', u'amaz', u'trio', u'best-lov', u'tune', u'world', u'war', u'noisi', u'pub', u'newfoundland', u'music', u'music', u'come', u'music', u'inspir', u'stagehous', u'live', u'spirit', u'newfoundland', u'inspir', u'name', u'inde', u'energi', u'john', u'embrac', u'heard', u'thought', u'artist', u'sound', u'sing', u'speak', u'canada', u'citi', u'quieter', u'floor', u'interview', u'mean', u'tragedi', u'fuel', u'instead', u'hope', u'island', u'philip', u'immin', u'intertwin', u'hour', u'lament', u'perform', u'soul', u'st', u'time', u'feed', u'vision', u'late'])\n",
+      "[u'picturesqu', u'stagehous', u'record', u'studio', u'featur', u'song', u'record', u'live', u'fastest', u'rise', u'band', u'deep', u'music', u'spirit', u'uniqu', u'newfoundland', u'phrase', u'tast', u'song', u'origin', u'song', u'uniqu', u'opportun', u'band', u'embodi', u'stagehous', u'featur', u'love', u'defeat', u'docksid', u'tavern', u'amaz', u'trio', u'best-lov', u'tune', u'world', u'war', u'noisi', u'pub', u'newfoundland', u'music', u'music', u'come', u'music', u'inspir', u'stagehous', u'live', u'spirit', u'newfoundland', u'inspir', u'name', u'inde', u'energi', u'john', u'embrac', u'heard', u'thought', u'artist', u'sound', u'sing', u'speak', u'canada', u'citi', u'quieter', u'floor', u'interview', u'mean', u'tragedi', u'fuel', u'instead', u'hope', u'island', u'philip', u'immin', u'intertwin', u'hour', u'lament', u'perform', u'soul', u'st', u'time', u'feed', u'vision', u'late']\n",
       "\n",
-      "([TaggedDocument(words=[u'st', u'john', u'newfoundland', u'is', u'citi', u'deep', u'music', u'spirit', u'few', u'band', u'embodi', u'spirit', u'onc'], tags=[None]), TaggedDocument(words=[u'name', u'uniqu', u'newfoundland', u'phrase', u'mean', u'is', u'time'], tags=[None]), TaggedDocument(words=[u'live', u'stagehous', u'is', u'hour', u'interview', u'perform', u'amaz', u'trio', u'featur', u'song', u'record', u'live', u'floor', u'late', u'picturesqu', u'stagehous', u'record', u'studio', u'st', u'philip'], tags=[None]), TaggedDocument(words=[u'onc', u'embrac', u'differ', u'vision', u'newfoundland', u'music'], tags=[None]), TaggedDocument(words=[u'sound', u'do', u'come', u'noisi', u'pub', u'docksid', u'tavern', u'fuel', u'island', u'energi'], tags=[None]), TaggedDocument(words=[u'music', u'come', u'quieter', u'thought', u'place'], tags=[None]), TaggedDocument(words=[u'hope', u'tragedi', u'are', u'intertwin', u'are', u'sing', u'old', u'lament', u'world', u'war', u'origin', u'song', u'speak', u'love', u'defeat', u'tast', u'song', u'artist', u'music', u'inspir'], tags=[None]), TaggedDocument(words=[u'onc', u'live', u'stagehous', u'featur', u'best-lov', u'tune', u'heard'], tags=[None]), TaggedDocument(words=[u'is', u'uniqu', u'opportun', u'see', u'canada', u'fastest', u'rise', u'band', u'place', u'inspir', u'feed', u'soul'], tags=[None])], [u'st', u'john', u'newfoundland', u'is', u'citi', u'deep', u'music', u'spirit', u'few', u'band', u'embodi', u'spirit', u'onc', u'name', u'uniqu', u'newfoundland', u'phrase', u'mean', u'is', u'time', u'live', u'stagehous', u'is', u'hour', u'interview', u'perform', u'amaz', u'trio', u'featur', u'song', u'record', u'live', u'floor', u'late', u'picturesqu', u'stagehous', u'record', u'studio', u'st', u'philip', u'onc', u'embrac', u'differ', u'vision', u'newfoundland', u'music', u'sound', u'do', u'come', u'noisi', u'pub', u'docksid', u'tavern', u'fuel', u'island', u'energi', u'music', u'come', u'quieter', u'thought', u'place', u'hope', u'tragedi', u'are', u'intertwin', u'are', u'sing', u'old', u'lament', u'world', u'war', u'origin', u'song', u'speak', u'love', u'defeat', u'tast', u'song', u'artist', u'music', u'inspir', u'onc', u'live', u'stagehous', u'featur', u'best-lov', u'tune', u'heard', u'is', u'uniqu', u'opportun', u'see', u'canada', u'fastest', u'rise', u'band', u'place', u'inspir', u'feed', u'soul'])\n"
+      "[u'st', u'john', u'newfoundland', u'is', u'citi', u'deep', u'music', u'spirit', u'few', u'band', u'embodi', u'spirit', u'onc', u'name', u'uniqu', u'newfoundland', u'phrase', u'mean', u'is', u'time', u'live', u'stagehous', u'is', u'hour', u'interview', u'perform', u'amaz', u'trio', u'featur', u'song', u'record', u'live', u'floor', u'late', u'picturesqu', u'stagehous', u'record', u'studio', u'st', u'philip', u'onc', u'embrac', u'differ', u'vision', u'newfoundland', u'music', u'sound', u'do', u'come', u'noisi', u'pub', u'docksid', u'tavern', u'fuel', u'island', u'energi', u'music', u'come', u'quieter', u'thought', u'place', u'hope', u'tragedi', u'are', u'intertwin', u'are', u'sing', u'old', u'lament', u'world', u'war', u'origin', u'song', u'speak', u'love', u'defeat', u'tast', u'song', u'artist', u'music', u'inspir', u'onc', u'live', u'stagehous', u'featur', u'best-lov', u'tune', u'heard', u'is', u'uniqu', u'opportun', u'see', u'canada', u'fastest', u'rise', u'band', u'place', u'inspir', u'feed', u'soul']\n"
      ]
     }
    ],
    "source": [
-    "print test\n",
+    "print test[1]\n",
     "print\n",
-    "print testkeywords\n",
+    "print testkeywords[1]\n",
     "print\n",
-    "print testpostags"
+    "print testpostags[1]"
    ]
   },
   {
