added imdb to topic distribution

--- a/notebooks/topic_distribution.ipynb
+++ b/notebooks/topic_distribution.ipynb
@@ -11,7 +11,8 @@
     "from gensim import corpora, models, similarities, matutils\n",
     "import itertools\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from unidecode import unidecode"
    ]
   },
   {
@@ -47,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "wiki_topic_matrix = matutils.corpus2dense(lda[corpus], num_terms=30)\n",
+    "wiki_topic_matrix = matutils.corpus2dense(wiki_lda[corpus], num_terms=30)\n",
     "wiki_topic_df = pd.DataFrame(np.ndarray.transpose(wiki_topic_matrix))\n",
     "#topic_df['movie_title'] = pd.Series(movies, index=topic_df.index)"
    ]
@@ -835,6 +836,48 @@
    "source": [
     "print us_wiki_df.shape\n",
     "us_wiki_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "imdb_lda = models.LdaModel.load(dropbox +'lda_imdb.model')\n",
+    "imdb_corpus = corpora.MmCorpus(dropbox +'lda_imdb.corpus')\n",
+    "imdb_dict = corpora.Dictionary.load(dropbox +'lda_imdb.dict')\n",
+    "imdb_meta_df = pd.read_csv(dropbox + 'imdb_meta_df.csv')\n",
+    "imdb_topic_matrix = matutils.corpus2dense(imdb_lda[corpus], num_terms=30)\n",
+    "imdb_topic_df = pd.DataFrame(np.ndarray.transpose(wiki_topic_matrix))\n",
+    "imdb_topic_df = pd.concat([imdb_topic_df, imdb_meta_df], axis=1) \n",
+    "imdb_topic_df['title'] = imdb_topic_df['title'].apply(unidecode)\n",
+    "imdb_topic_df['title'] = imdb_topic_df['title'].apply(lambda x : x.split('(')[0].strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7807, 33)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_imdb_df = imdb_topic_df[imdb_topic_df['title'].isin(us_df.movie.tolist())]\n",
+    "us_imdb_df.shape"
    ]
   },
   {
