--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "imdb_df = pd.read_csv(dropbox + 'movieplots.csv')\n",
+    "imdb_df = pd.read_csv(dropbox_dir + 'movieplots.csv')\n",
     "wiki_df = pd.DataFrame()\n",
     "for year in range(2000, 2015):\n",
     "    df = pd.read_table(os.path.join(dropbox_dir, \"wikipedia\", \"wikipedia_plots_%d.csv\" % year))\n",
@@ -120,8 +120,8 @@
    "source": [
     "imdb_df = imdb_df.apply(clean_imdb_df, axis = 1)\n",
     "wiki_df.rename(columns = {'wiki_plot':'plot'}, inplace=True)\n",
-    "imdb_df[['title','year']].to_csv(dropbox + 'imdb_meta_df.csv')\n",
-    "wiki_df[['title','year', 'countries']].to_csv(dropbox + 'wiki_meta_df.csv')"
+    "imdb_df[['title','year']].to_csv(dropbox_dir + 'imdb_meta_df.csv')\n",
+    "wiki_df[['title','year', 'countries']].to_csv(dropbox_dir + 'wiki_meta_df.csv')"
    ]
   },
   {
@@ -461,7 +461,9 @@
    },
    "outputs": [],
    "source": [
-    "Rake = RAKE.Rake('/Users/mr/Devel/Harvard/CS109/Project/moviemeta/data/stoplists/FoxStoplist.txt')\n",
+    "from urllib import urlretrieve\n",
+    "urlretrieve(\"https://github.com/nok/rake-text-ruby/blob/master/stoplists/FoxStoplist.txt\", \"FoxStoplist.txt\")\n",
+    "Rake = RAKE.Rake('FoxStoplist.txt')\n",
     "def keywords(text):\n",
     "    \"\"\"extract keywords from text using RAKE algorithm\"\"\"\n",
     "    keywords = Rake.run(text)\n",
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 236,
    "metadata": {
     "collapsed": false
    },
@@ -529,7 +531,7 @@
     "            if len(word) < 2:\n",
     "                continue\n",
     "            words_processed.append(word)\n",
-    "        doc_sents.append(models.doc2vec.LabeledSentence(words_processed,[movie_id]))\n",
+    "        doc_sents.append(models.doc2vec.TaggedDocument(words_processed,[movie_id]))\n",
     "        doc_words += words_processed \n",
     "    return (doc_sents, doc_words)"
    ]
@@ -557,13 +559,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "imdb_plots_tm = imdb_df['plot'].apply(process_tm)"
+    "imdb_plots_tm = imdb_df['plot'].apply(process_tm)\n",
+    "#for testing\n",
+    "imdb_plots_tm_2015 = imdb_df[imdb_df.year == 2015]['plot'].apply(process_tm)"
    ]
   },
   {
@@ -575,12 +579,12 @@
    "outputs": [],
    "source": [
     "wiki_df = wiki_df[~ wiki_df['plot'].isnull()]\n",
-    "wiki_plots_tm = wiki_df['plot'].apply(process_tm)\n"
+    "wiki_plots_tm = wiki_df['plot'].apply(process_tm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 240,
    "metadata": {
     "collapsed": false
    },
@@ -594,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
@@ -606,7 +610,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-211-d47daac461e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimdb_plots_d2v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimdb_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'plot'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess_d2v\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-239-89d98239ed61>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#TODO bradcast exception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mimdb_plots_d2v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimdb_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'plot'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess_d2v\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#for testing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#imdb_plots_d2v_2015 = imdb_df[imdb_df.year == 2015][['title','plot']].apply(process_d2v, axis=1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/mr/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, axis, broadcast, raw, reduce, args, **kwds)\u001b[0m\n\u001b[1;32m   3716\u001b[0m         \u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3717\u001b[0m         \u001b[0mlevel\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthese\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m \u001b[0mlast\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3718\u001b[0;31m             \u001b[0mLevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0mto\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcan\u001b[0m \u001b[0;32mpass\u001b[0m \u001b[0mlevel\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3719\u001b[0m         \u001b[0mdropna\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mboolean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3720\u001b[0m             \u001b[0mWhether\u001b[0m \u001b[0mto\u001b[0m \u001b[0mdrop\u001b[0m \u001b[0mrows\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mresulting\u001b[0m \u001b[0mFrame\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mSeries\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mno\u001b[0m \u001b[0mvalid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/mr/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m_apply_standard\u001b[0;34m(self, func, axis, ignore_failures, reduce)\u001b[0m\n\u001b[1;32m   3823\u001b[0m         \u001b[0mbm_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_block_manager_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3824\u001b[0m         \u001b[0mnew_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mperiods\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbm_axis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3825\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_constructor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3826\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3827\u001b[0m     \u001b[0;31m#----------------------------------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/mr/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     def __init__(self, data=None, index=None, columns=None, dtype=None,\n\u001b[0;32m--> 214\u001b[0;31m                  copy=False):\n\u001b[0m\u001b[1;32m    215\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -619,13 +623,15 @@
     }
    ],
    "source": [
+    "#TODO bradcast exception\n",
     "imdb_plots_d2v = imdb_df[['title','plot']].apply(process_d2v, axis=1)\n",
-    "#TODO"
+    "#for testing\n",
+    "#imdb_plots_d2v_2015 = imdb_df[imdb_df.year == 2015][['title','plot']].apply(process_d2v, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {
     "collapsed": true
    },
@@ -685,26 +691,30 @@
    "outputs": [],
    "source": [
     "def save(docs, name):\n",
-    "    with open(dropbox + name + '.list', 'wb') as f:\n",
+    "    with open(dropbox_dir + name + '.list', 'wb') as f:\n",
     "        for plot in docs:\n",
     "            f.write(\"%s\\n\" % plot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 235,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#save the documents\n",
-    "#save(imdb_plots_tm , 'imdb_plots')\n",
-    "#save(wiki_plots_tm , 'wiki_plots_2000-2015')\n",
-    "with open(dropbox +'imdb_plots_d2v.pickle', 'wb') as f:\n",
-    "    np.save(f, documents_d2v.values)\n",
-    "with open(dropbox +'wiki_plots_d2v.pickle', 'wb') as f:\n",
-    "    np.save(f, documents_d2v.values)"
+    "save(imdb_plots_tm , 'imdb_plots')\n",
+    "save(wiki_plots_tm , 'wiki_plots')\n",
+    "save(imdb_plots_tm_2015 , 'imdb_plots_2015')\n",
+    "\n",
+    "#with open(dropbox_dir +'imdb_plots_d2v.pickle', 'wb') as f:\n",
+    "#    np.save(f, imdb_plots_d2v.values)\n",
+    "#with open(dropbox_dir +'imdb_plots_d2v_2015.pickle', 'wb') as f:\n",
+    "#    np.save(f, imdb_plots_d2v_2015.values)\n",
+    "with open(dropbox_dir +'wiki_plots_d2v.pickle', 'wb') as f:\n",
+    "    np.save(f, wiki_plots_d2v.values)"
    ]
   },
   {
@@ -717,7 +727,7 @@
    "source": [
     "#save the corresponding movies\n",
     "movies = dftouse['title'].values\n",
-    "with open(dropbox +'imdb_movies_since_2014.pickle', 'wb') as f:\n",
+    "with open(dropbox_dir +'imdb_movies_since_2014.pickle', 'wb') as f:\n",
     "    np.save(f,movies)"
    ]
   },
